fix: safe JAR download with temp file, fix deprecated URL constructor, document lock invariant
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>